[gd_scene load_steps=23 format=2]

[ext_resource path="res://player_first.gd" type="Script" id=1]
[ext_resource path="res://UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/stormdays_dark.jpg" type="Texture" id=3]
[ext_resource path="res://Bulletcurve.tres" type="Curve" id=4]
[ext_resource path="res://DogFightTutorial-master/TrailRenderScriptClass/TrailRender.gd" type="Script" id=5]
[ext_resource path="res://samitransparent.tres" type="Material" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.572803, 0.607212, 0.680079 )

[sub_resource type="PanoramaSky" id=3]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
ambient_light_energy = 0.0
ambient_light_sky_contribution = 0.0
fog_depth_begin = 20.0

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=7]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance2:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.446, 0.00600004, -1.03131 ), Vector3( 0.446, 0.0178301, -0.887443 ), Vector3( 0.446, 0.006, -1.031 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance3:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.446, -0.070034, -0.821485 ), Vector3( 0.446, -0.11191, -0.69456 ), Vector3( 0.446, -0.126563, -0.833976 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 6, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -103.117, 0, 0 ), Vector3( -91.651, 0, 0 ), Vector3( -103.1, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MeshInstance:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.532193, 0, 0 ), Vector3( -0.549795, 0, 0 ), Vector3( -0.0807996, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MeshInstance:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.461264, -0.154098, -0.382723 ), Vector3( 0.44697, -0.198909, -0.324685 ), Vector3( 0.477479, -0.22556, -0.420057 ) ]
}

[sub_resource type="CubeMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_color = Color( 0.992157, 1, 0.705882, 1 )

[sub_resource type="CapsuleMesh" id=12]

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0, 0.027451, 0.113725, 1 )

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.00392157, 0.0117647, 0.12549, 1 )

[sub_resource type="CapsuleMesh" id=11]

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.835294, 0, 0, 1 )

[sub_resource type="SphereMesh" id=10]

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.941406, 0.93658, 0.632507, 1 )

[sub_resource type="Animation" id=17]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance4:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.315148, -2.99163, 0 ), Vector3( -0.315148, -2.69357, 0.650805 ), Vector3( -0.315, -2.992, 0 ), Vector3( -0.315, -2.67723, -0.849614 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance4:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 53.69, 0, 0 ), Vector3( 90, 0, 0 ), Vector3( 137.247, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance3:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.342696, -2.99163, 0 ), Vector3( 0.342696, -2.82912, -0.678121 ), Vector3( 0.342696, -2.99163, 0 ), Vector3( 0.342696, -2.8267, 0.653174 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MeshInstance3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 0, 0 ), Vector3( 126.41, 0, 0 ), Vector3( 90, 0, 0 ), Vector3( 49.85, 0, 0 ) ]
}

[node name="player" type="KinematicBody" groups=[
"player",
]]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0.161849, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0, 1, 0, 0, 0, 3, 1, 0, 0, 0, -1.76513, 0 )
shape = SubResource( 1 )

[node name="Control" parent="." instance=ExtResource( 2 )]

[node name="CamStaticBase" type="Spatial" parent="."]

[node name="CamBase" type="Spatial" parent="CamStaticBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.827705, 0 )

[node name="Camera" type="Camera" parent="CamStaticBase/CamBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.417, 0 )
environment = SubResource( 4 )
current = true
fov = 90.0
size = 10.0
far = 8192.0

[node name="StaticGunBase" type="Spatial" parent="."]

[node name="GunBase" type="Spatial" parent="StaticGunBase"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, -0.740041, 0 )

[node name="MeshInstance3" type="MeshInstance" parent="StaticGunBase/GunBase"]
transform = Transform( 0.08, 0, 0, 0, -0.0181552, 0.194783, 0, -0.0779127, -0.0453882, 0.446, -0.070034, -0.821485 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="StaticGunBase/GunBase"]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.3, 0.446, 0.00600004, -1.03131 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticGunBase/GunBase"]
playback_process_mode = 0
method_call_mode = 1
anims/shooting = SubResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="StaticGunBase/GunBase"]
transform = Transform( 0.0772416, 0, 0, 0, 0.105162, -0.00359879, 0, 0.000976828, 0.387432, 0.461264, -0.154098, -0.382723 )
cast_shadow = 0
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="TrailRenderer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.88, 0 )
script = ExtResource( 5 )
width = 2.0
width_curve = ExtResource( 4 )
exp_max_points = 150
material = ExtResource( 6 )

[node name="TrailRenderer2" type="Spatial" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, -1.88, 0 )
script = ExtResource( 5 )
width = 2.0
width_curve = ExtResource( 4 )
exp_max_points = 150
material = ExtResource( 6 )

[node name="PlayerGraphics" type="Spatial" parent="."]

[node name="MeshInstance4" type="MeshInstance" parent="PlayerGraphics"]
transform = Transform( 0.227721, 0, 0, 0, -1.29163e-08, -0.58791, 0, 0.295491, -2.56984e-08, -0.315148, -2.99163, 0 )
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="MeshInstance3" type="MeshInstance" parent="PlayerGraphics"]
transform = Transform( 0.227721, 0, 0, 0, -1.29163e-08, -0.58791, 0, 0.295491, -2.56984e-08, 0.342696, -2.99163, 0 )
mesh = SubResource( 12 )
material/0 = SubResource( 14 )

[node name="MeshInstance2" type="MeshInstance" parent="PlayerGraphics"]
transform = Transform( 0.593016, 0, 0, 0, -9.4601e-08, -0.580657, 0, 0.450725, -7.34324e-08, 0, -1.40773, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 15 )

[node name="MeshInstance" type="MeshInstance" parent="PlayerGraphics"]
transform = Transform( 0.557077, 0, 0, 0, 0.63659, 0, 0, 0, 0.7, 0, 0, 0 )
mesh = SubResource( 10 )
material/0 = SubResource( 16 )

[node name="BodyPlayer" type="AnimationPlayer" parent="PlayerGraphics"]
anims/run = SubResource( 17 )
